--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "ionic3SidemenuVanilla",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "MobileCaddy",
+  "homepage": "http://mobilecaddy.net/",
+  "description": "MobileCaddy sidemenu starter for Ionic",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "mobilecaddy": "node_modules/mobilecaddy-codeflow/bin/mobilecaddy-app-scripts.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.9",
@@ -27,13 +29,15 @@
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "mobilecaddy-utils": "git+https://github.com/mobilecaddy/mobilecaddy-utils.git#v2",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
+    "underscore": "^1.8.3",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "typescript": "~2.6.2"
-  },
-  "description": "An Ionic project"
+    "typescript": "~2.6.2",
+    "mobilecaddy-codeflow": "git+https://github.com/mobilecaddy/codeflow.git#v2"
+  }
 }
